feat: add leaderboard page (#5)
* leaderboard: add backend for leaderboard generation

* openapi: generate

* api: add leaderboard to frontend
